// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast behaviour creates initial elements 1`] = `
Array [
  <ToastMessage
    message={
      Object {
        "id": "foo",
        "text": "Test 1",
        "type": "a",
      }
    }
  />,
  <ToastMessage
    message={
      Object {
        "id": "bar",
        "text": "Test 2",
        "type": "b",
      }
    }
  />,
]
`;

exports[`Toast rendering renders all messages 1`] = `
<div
  className="Toast"
>
  <div
    className="Toast__messages"
  >
    <div />
    <div />
  </div>
</div>
`;

exports[`Toast rendering renders modal backdrop when hasFatalError returns true 1`] = `
<div
  className="Toast"
>
  <div
    className="Toast__messages"
  >
    <div />
    <div />
  </div>
  <div
    className="Toast__backdrop"
  />
</div>
`;
